# aliyun-datahub-sdk-cpp

./: CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt
client/example/: CMakeLists.txt  example_async_produce.cpp  example_collaborative_consume.cpp  example_general_produce.cpp
client/include/client/: common_config.h  topic_meta.h  write_result.h
client/include/client/consumer/: consumer_config.h  datahub_consumer.h
client/include/client/producer/: datahub_producer.h  producer_config.h
client/src/: config.cpp  constant.h  consumer_coordinator.cpp  consumer_coordinator.h  consumer_heartbeat.cpp  consumer_heartbeat.h  datahub_client_factory.cpp  datahub_client_factory.h  datahub_consumer.cpp  datahub_producer.cpp  logger.cpp  logger.h  message_reader.cpp  message_reader.h  message_writer.cpp  message_writer.h  meta_cache.cpp  meta_cache.h  meta_data.cpp  meta_data.h  offset_coordinator.cpp  offset_coordinator.h  offset_manager.cpp  offset_manager.h  offset_meta.h  record_pack.cpp  record_pack.h  record_pack_queue.cpp  record_pack_queue.h  shard_coordinator.cpp  shard_coordinator.h  shard_group_reader.cpp  shard_group_reader.h  shard_group_writer.cpp  shard_group_writer.h  shard_meta.h  shard_offset_heap.cpp  shard_offset_heap.h  shard_reader.cpp  shard_reader.h  (+12 more)
client/tests/: CMakeLists.txt  config.cpp  config.h
client/tests/common/: datahub_client_factory_test.cpp  meta_cache_test.cpp  meta_data_test.cpp
client/tests/consumer/: consumer_test.cpp  heartbeat_test.cpp  offset_manager_test.cpp  shard_reader_test.cpp
client/tests/producer/: shard_group_writer_test.cpp  shard_writer_test.cpp
client/unittests/: CMakeLists.txt  run_tests.cpp
client/unittests/common/: datahub_client_factory_gtest.cpp  meta_cache_gtest.cpp  meta_data_gtest.cpp
client/unittests/consumer/: offset_manager_gtest.cpp  shard_group_reader_gtest.cpp  shard_offset_head_gtest.cpp  shard_reader_gtest.cpp  shard_select_strateg_gtest.cpp  sync_group_meta_gtest.cpp
client/unittests/gmock/: consumer_coordinator_gmock.h  datahub_client_gmock.h  meta_data_gmock.h  result_gmock.h
client/unittests/producer/: record_pack_gtest.cpp  record_pack_queue_gtest.cpp  shard_group_writer_gtest.cpp  shard_writer_gtest.cpp
example/: CMakeLists.txt  example_blob.cpp  example_c.c  example_cpp.cpp  example_pub_sub.cpp  readme
include/datahub/: datahub_client.h  datahub_compressor.h  datahub_config.h  datahub_connector.h  datahub_error.h  datahub_exception.h  datahub_meter.h  datahub_record.h  datahub_request.h  datahub_result.h  datahub_shard.h  datahub_subscription.h  datahub_subscription_offset.h  datahub_typedef.h  datahub_wrapper.h  sdk_version.h.in
makefile/: CMakeLists.txt
proto/: common_request.proto  common_type.proto
src/: auth_signer.cpp  auth_signer.h  crcutils.cpp  crcutils.h  curl_handle_container.cpp  curl_http_client.cpp  datahub_client.cpp  datahub_client_impl.cpp  datahub_client_impl.h  datahub_client_json_impl.cpp  datahub_client_json_impl.h  datahub_client_pb_impl.cpp  datahub_client_pb_impl.h  datahub_compressor.cpp  datahub_error.cpp  datahub_exception.cpp  datahub_wrapper.cpp  error_parser.cpp  error_parser.h  http_types.cpp  json_tool.cpp  json_tool.h  outcome.h  protobuf_parser.cpp  protobuf_parser.h  protobuf_tool.cpp  protobuf_tool.h  resource_wrappers.h  uri.cpp  utils.cpp  utils.h
src/http/: http_client.h  http_headers.h  http_request.h  http_response.h  http_types.h  scheme.h  uri.h
src/http/curl/: curl_handle_container.h  curl_http_client.h
src/model/: activate_shard_request.cpp  activate_shard_result.cpp  append_connector_field_request.cpp  append_connector_field_result.cpp  append_field_request.cpp  append_field_result.cpp  create_connector_request.cpp  create_connector_result.cpp  create_project_request.cpp  create_project_result.cpp  create_subscription_request.cpp  create_subscription_result.cpp  create_topic_request.cpp  create_topic_result.cpp  cursor_type.cpp  datahub_config.cpp  datahub_connector.cpp  datahub_request.cpp  delete_connector_request.cpp  delete_connector_result.cpp  delete_project_request.cpp  delete_project_result.cpp  delete_subscription_request.cpp  delete_subscription_result.cpp  delete_topic_request.cpp  delete_topic_result.cpp  delete_topic_schema_request.cpp  delete_topic_schema_result.cpp  error_entry.cpp  field.cpp  field_type.cpp  get_connector_done_time_request.cpp  get_connector_done_time_result.cpp  get_connector_request.cpp  get_connector_result.cpp  get_connector_shard_status_by_shard_request.cpp  get_connector_shard_status_by_shard_result.cpp  get_connector_shard_status_request.cpp  get_connector_shard_status_result.cpp  get_cursor_request.cpp  (+86 more)
tests/: CMakeLists.txt  config.cpp  config.h
tests/client/: connector_test.cpp  consumer_test.cpp  metering_info_test.cpp  offset_test.cpp  project_test.cpp  put_pb_record_test.cpp  put_record_by_shard_test.cpp  put_record_test.cpp  shard_test.cpp  topic_test.cpp  utils_test.cpp
